--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href = "http://webdgap.sf.net/";
+  window.location.href = "https://michaelsboost.github.io/WebDGap/";
 </script>
